Bug 359187 When a draft message is edited the default BCC entries get duplicated p=sugar.waffle@gmail.com (Hiro) r=me sr=bienvenu